# clp-bench

./: .gitignore  README.md  pyproject.toml
assets/elasticsearch/: Dockerfile  compress.py  docker_build.sh  docker_run.sh  ela-config.yaml  poll_mem.py  query.py  start-ela.sh  stop-ela.sh
assets/elasticsearch-unstructured/: compress.py  docker_build.sh  docker_run.sh  ela-config.yaml  poll_mem.py  query.py  start-ela.sh
assets/loki/: loki-config.yaml  loki_docker_run.sh  promtail-config.yaml  promtail_docker_run.sh
docs/: methodology.md
src/clp_bench/: __init__.py  clpg_executor.py  clpjson_executor.py  clps_executor.py  elasticsearch_executor.py  elasticsearchunstructured_executor.py  executor.py  glt_executor.py  grafanaloki_executor.py  grep_executor.py  mongodb_executor.py  version.py
ui/: .env  .gitignore  README.md
ui/backend/: app.py  load_results.py  requirements.txt
ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ui/frontend/src/: App.tsx  index.css
